--- a/temp.html
+++ b/temp.html
@@ -12,7 +12,7 @@
         }
         .wrapper {
             width: 100%;
-            height: 75%
+            height: 75%;
         }
         .controls {
             background: lightgray;
@@ -24,20 +24,20 @@
     <script>
         var webComponent;
         document.addEventListener("DOMContentLoaded", function(event) {
-            webComponent = document.querySelector('x-view')
+            webComponent = document.querySelector('x-canvas')
         });
     </script>
 </head>
 <body>
 <div class="wrapper">
-    <x-view minBubbleSize="5"
+    <x-canvas minBubbleSize="5"
             maxBubbleSize="20"
             drawingInterval="10"
             removalInterval="10000"
             bubbleColor="#000000"
-            bubbleOpacity="0.1"></x-view>
+            bubbleOpacity="0.1"></x-canvas>
 
-    <script src="jscolor.js"></script>
+    <script src="temp_jscolor.js"></script>
 </div>
 <div class="controls">
 
